# tech-content-curator

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI-DEVELOPMENT-GUIDE.md  BUGS.md  CODE-IMPROVEMENTS.md  CODE-REVIEW-SUMMARY.md  FEATURE-3-MERMAID-FIX.md  FREE-THREADING-SUMMARY.txt  PRECOMMIT-CHECKLIST.md  PRIORITY-4-HARDCODED-VALUES.md  PROJECT-STATUS.md  README.md  SETUP.md  TODO.md  demo_citations.py  pyproject.toml  pyrightconfig.json  pytest.ini  regenerate_recent_articles.py  test.json  test_attribution.py  test_citations_on_articles.py
content/: about.md  search.md
data/: ab_test_results.json  article_gpt-4o-mini.md  article_gpt-5.1.md  citations_cache.json  complex_article_test.json  dedup_feedback.json  dedup_patterns.json  generation_costs.json  image_catalog.json  known-models.json  model_comparison.json  model_pricing.json  quality_history.json  scoring_feedback.json  scoring_patterns.json  voice_history.json
demo/: demo_citation_workflow.py  demo_citations.py  demo_image_selector.py  demo_single_article.py  local_simulate_generation.py  test_image_selection_fix.py  test_improved_image_selector.py
docs/: ADAPTIVE-DEDUP-GUIDE.md  ADR-001-URL-PATH-STRATEGY.md  ADR-002-ENHANCED-DEDUPLICATION.md  ADR-003-DEDUP-PIPELINE-INTEGRATION.md  ADR-004-ADAPTIVE-DEDUPLICATION.md  ADR-005-SCIENTIFIC-ARTICLE-IMPROVEMENTS.md  ADR-006-STORY-DEDUPLICATION.md  ADR-007-primary-source-integration.md  AI-DEVELOPMENT-GUIDE.md  API-CREDIT-MANAGEMENT.md  ARTICLE-GENERATION-REVIEW.md  ARTICLE-QUALITY-IMPROVEMENT-PLAN.md  ARTICLE-QUALITY-PHASE-2.md  AUTO-MODEL-DETECTION.md  CITATIONS-FEATURE-REVIEW.md  CODE-IMPROVEMENTS.md  CODE-QUALITY-REVIEW.md  CREDIT-MANAGEMENT-QUICKSTART.md  DEDUPLICATION-IMPLEMENTATION.md  DUAL-SCORING-PIPELINE.md  FEATURE-1-IMAGES.md  FEATURE-1-STATUS.md  FEATURE-2-COMPLETION-SUMMARY.md  FEATURE-2-IMPLEMENTATION.md  FEATURE-3-COMPLETION.md  FEATURE-3-DESIGN.md  FEATURE-3-ILLUSTRATIONS.md  FEATURE-3-MERMAID-STRATEGY.md  FREE-THREADING-INTEGRATION-SUMMARY.md  FREE-THREADING-OPTIMIZATION.md  FREE-THREADING-SETUP.md  ILLUSTRATION-IMPROVEMENT-ANALYSIS.md  IMPLEMENTATION-CHECKLIST.md  IMPLEMENTATION-STRATEGY-SCIENTIFIC-ARTICLES.md  LOGGING-GUIDE.md  MODEL-EVALUATION-STRATEGY.md  MODEL-SELECTION-GUIDE.md  MODEL-TESTING-GUIDE.md  MODULAR-REFACTOR-PYTHON314.md  OPTIMIZATION.md  (+25 more)
scripts/: ab_test_models.py  analyze_article_quality.py  analyze_duplicates.py  analyze_evaluation.py  analyze_tags.py  assign_missing_images.py  backfill_image_attribution.py  compare_models.py  (+36 more)
(+553 files in other folders)
